--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "homepage": "https://github.com/Liaozhenting/light-console",
   "scripts": {
     "start": "cd dev && node script.server.js",
-    "build": "cross-env BABEL_ENV=commonjs babel src --out-dir lib  && lessc ./assets/index.less ./assets/index.css"
+    "build": "cross-env BABEL_ENV=commonjs babel src --out-dir lib  && lessc ./assets/index.less ./assets/index.css",
+    "test": "mocha --recursive --timeout 5000"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -16,16 +17,19 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.10",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
+    "mocha": "^5.0.4",
     "mockjs": "^1.0.1-beta3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "style-loader": "^0.20.2",
     "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "xhr2": "^0.1.4"
   },
   "dependencies": {
     "classnames": "2.x",
